style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

    /* color: #00abf0; -> old blue */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}


body {
    background-color: #222;
    /* background: linear-gradient(90deg, hsla(213, 77%, 14%, 1) 0%, hsla(202, 27%, 45%, 1) 100%); */
    /* background: rgb(34,34,34); */
    color: #ededed;
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 20px 10%;
    background: transparent;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
}

.logo {
    position: relative;
    font-size: 25px;
    color: #ededed;
    text-decoration: none;
    font-weight: 600;
}

.logo img {
    height: 60px;
    width: 60px;
}

.navbar a {
    font-size: 18px;
    color: #ededed;
    text-decoration: none;
    font-weight: 500;
    margin-left: 35px;
    transition: 0.3s;
}

.navbar a:hover,
.navbar a.active {
    color: #bb86fc;
}

.navbar .toggle-btn {
    font-size: 35px;
    cursor: pointer;
    display: none;
}

.home, .comingsoon {
    height: 100vh;
    display: flex;
    align-items: center;
    padding: 0 10%;
}

.comingsoon {
    justify-content: center;
}

/* Avoid Chrome to see Safari hack */
@supports (-webkit-touch-callout: none) {
    body {
      /* The hack for Safari */
      height: -webkit-fill-available;
    }
}

.home-content h1 {
    position: relative;
    font-size: 56px;
    font-weight: 700;
    line-height: 1.0;
}

.comingsoon-content h1 {
    font-size: 56px;
}

.home-content h3 {
    position: relative;
    font-size: 32px;
    font-weight: 700px;
    color: #bb86fc;
}

.home-content p {
    position: relative;
    font-size: 16px;
    margin: 20px 0 40px;
    max-width: 50%;
}

.home-content img {
    width: 50px;
}


.btn-box a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 170px;
    height: 50px;
    background: transparent;
    color: #bb86fc;
    border: 2px solid #bb86fc;
    border-radius: 8px;
    font-size: 19px;
    text-decoration: none;
    font-weight: 600;
    letter-spacing: 1px;
    transition: 0.5s;
}

/* .btn-box a:hover,
.home-social a:hover {
    background: #00abf0;
    color: #081b29;
} */


.home-social {
    position: absolute;
    bottom: 80px;
    width: 120px;
    display: flex;
    justify-content: space-between;
}


.home-social a {
    position: relative;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 50px;
    background: transparent;
    border: 2px solid #bb86fc;
    border-radius: 50%;
    color: #bb86fc;
    text-decoration: none;
    font-size: 20px;
    z-index: 1;
    overflow: hidden;
    transition: 0.5s;
}


/* Fix for iOS hover state stuck after tapping them */
@media (hover:hover) {
    .btn-box a:hover,
    .home-social a:hover {
        background: #bb86fc; 
        color: #081b29;
    }
 }
 @media (hover:hover) {
    .navbar a:hover {
        color: #bb86fc;
    }
 }


/* RESPONSIVE DESIGN */
@media (max-width: 1120px) {
    .home-content p {
        max-width: 80%;
    }
}

@media (max-width: 960px) {
    .home-content h1 {
        font-size: 45px;
    }

    .home-content h3 {
        font-size: 21px;
    }

    .home-content p {
        max-width: 100%;
    }
}

@media (max-width: 790px) {
    .home-content h1 {
        font-size: 40px;
    }

    .comingsoon-content h1 {
        font-size: 30px;
    }

    .comingsoon-content img {
        width: 50px;
    }

    .home-content h3 {
        font-size: 20px;
    }

    .home-content p {
        max-width: 100%;
    }

    .navbar .links {
        flex-direction: column;
        justify-content: space-between;
        position: absolute;
        right: 1rem;
        top: 80px;
        width: 155px;
        height: 0px;
        background: #282828;
        backdrop-filter: blur(15px);
        border-radius: 10px;
        overflow: hidden;
        padding: 0.7rem;
        transition: height 1s ease;
        visibility: hidden;
        opacity: 0;
    }

    .navbar .links.active {
        display: flex;
        visibility: visible;
        opacity: 1;
        height: 200px;
    }


    .navbar .toggle-btn {
        display: block;
    }

    .toggle-btn .bx-x {
        display: none;
    }

    .toggle-btn .bx-x.active {
        display: inline-block;
    }

    .toggle-btn .bx-menu.active {
        display: none;
    }
}



@media (max-width: 435px) {
    .home-content h1 {
        font-size: 20px;
    }
    
    .home-content h3 {
        font-size: 15px;
    }

    .home-content p {
        font-size: 13px;
        max-width: 100%;
    }

    .home-content img {
        width: 22px;
    }

    .home-social {
        bottom: 40px;
    }
}

